cost benefit fixed

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -19,7 +19,15 @@
     "\n",
     "Since there are many pieces of information belonging to a patient encounter, health care data has many complications and limitations to be aware of when analyzing.  I established the level of the patient data and used aggregations to avoid unnecessary noise in the data as well as to avoid unwanted biases.  The main identifying factors analyzed were patient demographics (age, gender, race), primary diagnosis and patient discharge disposition for the encounter.  Analysis findings show that age, circulatory (or cardiac) and respiratory primary diagnoses and discharges to home (without home health care) and facility transfers are the highest predictors for excess readmission.  Modeling predictions had accuracy of 58%, with 90% recall True Positive predictions of predicting a patient would be readmitted and they were and under 10% predictions of a patient not being readmitted yet they actually were.  With cost-benefit analysis in mind, I believe this is a significant starting point for further evaluation and analysis.\n",
     "\n",
-    "Cost-benefit analysis used:\n",
+    "Cost-benefit analysis used: \n",
+    "Variable costs per day of hospital (hospital incurred): \n",
+    "- The average cost of a patient's first day is 1246 dollars\n",
+    "- The average cost of a patient's last day 304 dollars \n",
+    "\n",
+    "When a patient is readmitted the hospital, they incur this first day cost twice, whereas an extra day is financially more beneficial. \n",
+    "\n",
+    "https://www.journalacs.org/article/S1072-7515(00)00352-5/fulltext\n",
+    "https://www.beckershospitalreview.com/finance/average-cost-per-inpatient-day-across-50-states.html\n",
     "\n",
     "I would recommend that hospital healthcare providers engage in more rigorous discharge planning when patients are being discharged to their homes.  It would also be advantageous for inpatient hospital providers of high-risk patients to be provided more in-depth education of their health issues along with resources to assist in further patient education.  Lastly, hospitals, insurance companies and providers would benefit from patient incentives for regular physical exams and preventative care treatment with their outpatient primary care physicians.\n",
     "This project has a lot of further research planned, including model tuning to lower the False Positive rate of predicting that a patient will be readmitted and they are actually not high risk for readmission and deeper analysis of patient encounter data available.  This project would benefit from collection of more data from a larger range of hospitals or locations and collection of supplementary features of patient medical encounter data."
